--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gina</title>
     <meta name="discription" content="happy">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel=”stylesheet” href=”https://91na16.github.io/gina../style.css”/>
     <link rel="stylesheet" href="css/reset.css"">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
 </head>
